// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Films by genre. State filmsBy 1`] = `
<section
  className="result-sort__container"
>
  <div>
    <span>
      <strong>
        Films by 
      </strong>
    </span>
    <span>
      Drama genre
    </span>
  </div>
</section>
`;

exports[`Films by sort State moviesFound 1`] = `
<section
  className="result-sort__container"
>
  <div>
    <span>
      <strong>
        7 movies found
      </strong>
    </span>
  </div>
  <div>
    <span>
      <strong>
        Sort by
      </strong>
    </span>
    <button
      className="btn_sort"
      type="button"
    >
      release date
    </button>
    <button
      className="btn_sort"
      type="button"
    >
      rating
    </button>
  </div>
</section>
`;
